<resources>
    <string name="app_name">Supplications from the Quran</string>
    <string name="data_base_name">SFQ_en</string>
    <string name="action_night_mode">Night mode</string>
    <string name="action_settings">Settings</string>
    <string name="action_share_link">Share link</string>
    <string name="action_exit">Exit</string>
    <string name="text_size">Text size</string>
    <string name="indent_size">Indent size</string>
    <string name="text_color_arabic">Text color arabic</string>
    <string name="text_color_translation">Text color translation</string>
    <string name="share_to">Share to:</string>
    <string name="about_us" />
    <string name="play_list">Playlist</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="action_about_us" />
    <string name="select_language">Select language</string>
    <string-array name="language_arrays">
        <item>العربية</item>
        <item>English</item>
        <item>Русский</item>
    </string-array>
    <string name="default_lang">en</string>
</resources>